--- a/index.html
+++ b/index.html
@@ -12,36 +12,29 @@
     <!-- Heading (go horizontial)--> 
         <div class="Navbar">
             <p> Alexander Chan</p>
+            <p> ATLAS 4650/5630</p>
             <p>
-                <a href="www.google.com">Frontend Portfolio</a>
+                <a href="www.google.com">Labs</a>
                 <a href="www.youtube.com">Projects</a>
+                <a href="www.youtube.com">Process</a>
+                <a href="www.youtube.com">Code</a>
+
             </p>
         </div>
 
     <!--Purpose of page  -->
         <div class="purpose">
+            <h3>Welcome to the Frontend development portal</h3>
             <p>This blog will showcase all of my workings with Frontend development.</p>
 
         </div>
 
-    <!--List of projects  -->
-    <div class="projects">
-        <p> Projects</p>
-        <ul>
-            <li> Project 1</li>
-            <li> Project 2</li>
-            <li> Project 3</li>
-            <li> Project 4</li>
-        </ul>
-
-    </div>
-
 
     <!-- Footer -->
-    <div class="Footer">
-        <p> @Alexander Chan 2022</p>
+        <div class="Footer">
+            <p> @Alexander Chan 2022</p>
 
-    </div>
+        </div>
 </div>
     
 </body>
