--- a/Labs.html
+++ b/Labs.html
@@ -22,7 +22,7 @@
             </button>
             <h1>Lab workings</h1>
             <ul>
-                <li> <a href="">Lab 1</a></li>
+                <li> <a href="https://acturnup.github.io/Altas_frontend/Assignment%201/index.html">Lab 1</a></li>
                 <li> <a href="">Lab 2</a></li>
                 <li> <a href="">Lab 3</a></li>
                 <li> <a href="">Lab 4</a></li>
