--- a/Labs.html
+++ b/Labs.html
@@ -24,7 +24,7 @@
             <ul>
                 <li> <a href="">Lab 1</a></li>
                 <li> <a href="">Lab 2</a></li>
-                <li> <a href="">Lab 3</a></li>
+                <li> <a href="https://acturnup.github.io/Altas_frontend/Assignment%203%20-%20Javascript%20Debugging/">Lab 3</a></li>
                 <li> <a href="">Lab 4</a></li>
                 <li> <a href="">Lab 5</a></li>
                 <li> <a href="">Lab 6</a></li>
